--- a/RecipeNotebook/src/main/resources/static/recipes/new.html
+++ b/RecipeNotebook/src/main/resources/static/recipes/new.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         rel="stylesheet">
-  <link rel="stylesheet" href="/static/css/recipes.css"> <!-- recipes用CSSの読み込み -->
+  <link rel="stylesheet" href="/static/css/recipes.css">
 </head>
 
 <body class="py-5">
