--- a/RecipeNotebook/src/main/resources/static/detail.html
+++ b/RecipeNotebook/src/main/resources/static/detail.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="mb-3">
-        <a th:href="@{/recipes/{id}/update(id=${recipeDetail.recipe.id})}" class="btn btn-primary">更新</a>
+        <a href="/update.html" class="btn btn-primary">更新</a>
       </div>
 
       <div class="mb-3">
@@ -97,7 +97,8 @@
   </div>
 </div>
 
-<!-- Bootstrap JS (optional) -->
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/js/recipes.js"></script>
 </body>
 </html>
