--- a/RecipeNotebook/src/main/resources/static/recipes.html
+++ b/RecipeNotebook/src/main/resources/static/recipes.html
@@ -65,7 +65,7 @@
   </form>
 
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <a href="/recipes/new.html" class="btn btn-success">新規登録</a>
+    <a href="/new.html" class="btn btn-success">新規登録</a>
     <span id="recipeCount" class="text-muted"></span>
   </div>
 
@@ -95,7 +95,7 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- jQuery (required for datepicker) -->
+<!-- jQuery (datepicker) -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- Bootstrap Datepicker JS -->
 <script
