新規作成画面（フロントエンド側）でバリデーションメッセージが表示されるように修正

--- a/RecipeNotebook/src/main/resources/static/recipes.html
+++ b/RecipeNotebook/src/main/resources/static/recipes.html
@@ -60,7 +60,7 @@
 
     <div class="col-12">
       <button type="submit" class="btn btn-primary">検索</button>
-      <button type="reset" class="btn btn-secondary ms-2">クリア</button>
+      <button type="reset" class="btn btn-secondary ms-2">検索条件をクリア</button>
     </div>
   </form>
 
