--- a/RecipeNotebook/src/main/resources/static/new.html
+++ b/RecipeNotebook/src/main/resources/static/new.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         rel="stylesheet">
-  <link rel="stylesheet" href="/static/css/recipes.css">
+  <link href="/css/recipes.css" rel="stylesheet">
 </head>
 
 <body class="py-5">
@@ -21,7 +21,7 @@
       <!-- レシピ名 -->
       <div class="mb-3">
         <label for="name" class="form-label">レシピ名（必須）</label>
-        <input type="text" class="form-control" id="name" name="recipe.name" required/>
+        <input type="text" class="form-control" id="name" name="recipe.name"/>
       </div>
 
       <!-- 画像のアップロード -->
