--- a/RecipeNotebook/src/main/resources/static/detail.html
+++ b/RecipeNotebook/src/main/resources/static/detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns:th="http://www.thymeleaf.org">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,91 +7,53 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         rel="stylesheet">
+  <link rel="stylesheet" href="css/recipes.css">
 </head>
-<body>
-<div class="container mt-4">
-  <div class="row">
-    <div class="col-md-8 offset-md-2">
-      <h1 class="mb-4" th:text="${recipeDetail.recipe.name}">卵焼き</h1>
+<body class="bg-light">
+<div class="container py-4">
+  <div class="row justify-content-center">
+    <div class="col-lg-8 col-md-10">
+      <div class="card shadow-sm">
+        <div class="card-body p-0">
+          <div id="displayRecipeDetail">
+            <!-- ここにレシピ詳細情報が動的に追加されます -->
+          </div>
 
-      <div class="mb-3">
-        <img th:src="${recipeDetail.recipe.imagePath}" class="img-fluid rounded" alt="レシピ画像">
-      </div>
-
-      <div class="mb-3">
-        <h5>情報元：<span th:text="${recipeDetail.recipe.recipeSource}">レシピの情報元</span></h5>
-      </div>
-
-      <div class="mb-3">
-        <a href="/update.html" class="btn btn-primary">更新</a>
-      </div>
-
-      <div class="mb-3">
-        <h3 th:text="${recipeDetail.recipe.servings}">●人前</h3>
-      </div>
-
-      <!-- 材料テーブル -->
-      <h4>材料</h4>
-      <table class="table table-striped">
-        <thead>
-        <tr>
-          <th>材料</th>
-          <th>分量</th>
-          <th>アレンジ</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="ingredient : ${recipeDetail.ingredients}">
-          <td th:text="${ingredient.name}">卵</td>
-          <td th:text="${ingredient.quantity}">3</td>
-          <td>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" th:checked="${ingredient.arrange}"
-                     disabled>
+          <div class="btn-group-custom text-center">
+            <div class="btn-group" role="group" aria-label="Recipe actions">
+              <button type="button" class="btn btn-outline-primary me-2"
+                      onclick="location.href='recipes.html';">
+                <i class="bi bi-arrow-left"></i> レシピ一覧に戻る
+              </button>
+              <button type="button" class="btn btn-outline-secondary me-2"
+                      onclick="location.href='update.html';">
+                <i class="bi bi-pencil"></i> レシピを編集する
+              </button>
+              <button type="button" class="btn btn-outline-danger">
+                <i class="bi bi-trash"></i> レシピを削除する
+              </button>
             </div>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-
-      <!-- 調理手順テーブル -->
-      <h4>調理手順</h4>
-      <table class="table table-striped">
-        <thead>
-        <tr>
-          <th>手順</th>
-          <th>内容</th>
-          <th>アレンジ</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="instruction : ${recipeDetail.instructions}">
-          <td th:text="${instruction.stepNumber}">1</td>
-          <td th:text="${instruction.content}">
-            卵を溶いて調味料を混ぜ、卵液を作る
-          </td>
-          <td>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" th:checked="${instruction.arrange}"
-                     disabled>
-            </div>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-
-      <div class="mb-3">
-        <h4>備考</h4>
-        <p th:text="${recipeDetail.recipe.remark}">備考欄のテストです。</p>
+          </div>
+        </div>
       </div>
+    </div>
+  </div>
+</div>
 
-      <div class="mb-3">
-        <p>作成日：<span
-            th:text="${#temporals.format(recipeDetail.recipe.createdAt, 'yyyy年MM月dd日')}">2024年10月1日</span>
-        </p>
-        <p>更新日：<span
-            th:text="${#temporals.format(recipeDetail.recipe.updatedAt, 'yyyy年MM月dd日')}">2024年10月12日</span>
-        </p>
+<!-- 削除確認モーダル -->
+<div class="modal fade" id="deleteModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">レシピの削除</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        このレシピを削除してもよろしいですか？
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">キャンセル</button>
+        <button type="button" class="btn btn-danger" id="confirmDelete">削除</button>
       </div>
     </div>
   </div>
@@ -99,6 +61,13 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/js/recipes.js"></script>
+<script src="js/recipes.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+      const urlParams = new URLSearchParams(window.location.search);
+      const recipeId = urlParams.get('id');
+      loadRecipeDetail(recipeId);
+  });
+</script>
 </body>
 </html>
