--- a/RecipeNotebook/src/main/resources/static/recipes.html
+++ b/RecipeNotebook/src/main/resources/static/recipes.html
@@ -7,7 +7,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         rel="stylesheet">
-  <link rel="stylesheet" href="/css/recipes.css">
+  <link rel="stylesheet" href="css/recipes.css">
 </head>
 <body class="bg-light">
 <div class="container mt-4">
@@ -102,7 +102,7 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 <script
     src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ja.min.js"></script>
-<script src="/js/recipes.js"></script>
+<script src="js/recipes.js"></script>
 
 </body>
 </html>
